--- a/src/Components/CountryList/CountriesList.css
+++ b/src/Components/CountryList/CountriesList.css
@@ -1,7 +1,6 @@
 /* Estilos gerais */
 .container {
     display: grid;
-
     padding: 20px;
     color: black;
     padding: 1rem;
@@ -9,9 +8,10 @@
 
 /* Título */
 .title {
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
     margin-bottom: 20px;
+    color: gold;
 }
 
 /* Input de busca */
@@ -39,9 +39,27 @@
 /* Grid de países */
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 15px;
     margin-top: 20px;
+}
+
+@media (width < 900px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media (width < 800px) {
+    .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (width < 600px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* Card de país */
@@ -60,8 +78,19 @@
 
 /* Imagem da bandeira */
 .flag {
-    width: 100%;
-    height: 120px;
-    object-fit: cover;
+    max-height: 100%;
+    max-width: 100%;
     border-radius: 8px;
+    box-shadow: 0px 0px 10px 10px #00000047;
+}
+
+.flag-container {
+    display: flex;
+    justify-content: center;
+    height: 200px;
+}
+
+/* CountryPage */
+.countrypage-subtitle {
+    background-color: gold;
 }
