--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,12 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
+  font-weight: 400;
+  color: #FFC107;
   text-decoration: inherit;
+  font-size: 20px;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -28,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #564e4e;
 }
 
 h1 {
@@ -66,3 +69,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
