formatei o css dos other countries with the same currency

--- a/src/Components/CountryList/CountriesList.css
+++ b/src/Components/CountryList/CountriesList.css
@@ -94,3 +94,9 @@
 .countrypage-subtitle {
     background-color: gold;
 }
+
+/* CountriesByCurrency*/
+.countrylist-subtitle {
+    color:gold;
+}
+
